# obsidian-cli

./: .gitignore  Cargo.toml  README.md  justfile
src/: app_settings.rs  cli_config.rs  commands.rs  formats.rs  main.rs  obsidian_note.rs  util.rs
src/commands/: config.rs  init.rs  notes.rs  vaults.rs
tests/: notes.rs  utils.rs  vaults.rs
tests/fixtures/: complex-note.md  link-types.md  with-fm-properties.md
tests/fixtures/another/path/: from-another-vault.md
tests/fixtures/main-vault/: complex-note.md  html.md  simple-note.md  table.md  with-fm-properties.md
tests/fixtures/main-vault/folder/: child-note.md
