[package]
name = "obz-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "obz"
path = "./src/main.rs"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.0", features = ["derive"] }
config = { version = "0.14.0", features = ["yaml"] }
console = "0.15.8"
dialoguer = "0.11.0"
open = "5.3.0"
serde = "1.0.204"
serde_json = "1.0.122"
serde_yaml = "0.9.34"
tabled = "0.16.0"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
indoc = "2.0.5"
predicates = "3.1.0"
rexpect = "0.5.0"
test-case = "3.3.1"

[patch.crates-io]
assert_cmd = { path = "../../assert_cmd" }
