[package]
name = "obsidian-cli"
version = "0.1.3"
edition = "2021"
description = "A CLI for managing obsidian vaults, notes and databases"
license = "MIT"
repository = "https://github.com/mcky/obsidian-cli"

[[bin]]
name = "obx"
path = "./src/main.rs"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.0", features = ["derive"] }
config = { version = "0.14.0", features = ["yaml"] }
console = "0.15.8"
dialoguer = "0.11.0"
etcetera = "0.8.0"
open = "5.3.0"
regex = "1.10.6"
serde = "1.0.204"
serde_json = "1.0.122"
serde_yaml = "0.9.34"
tabled = "0.16.0"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
indoc = "2.0.5"
predicates = "3.1.0"
rexpect = "0.5.0"
test-case = "3.3.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
